...
                              child: _buildAction(widget.actions[index]),
                            ),
                        ],
                      ),
                    ),
                  Semantics(
                    label: _menuOpen ? 'Close menu' : 'Open actions menu',
                    button: true,
                    child: FloatingActionButton(
                      heroTag: widget.heroTag,
                      onPressed: () => _setMenuOpen(!_menuOpen),
                      child: _menuOpen ? widget.closeIcon : widget.menuIcon,
                    ),
...
