...
            } else {
              context.go('/animal');
            }
          },
          icon: const Icon(Icons.arrow_back),
        ),
        title: const Text('Create Animals'),
      ),
      body: Form(
        key: _formKey,
        child: SingleChildScrollView(
          padding: const EdgeInsets.all(16),
          child: Column(
...
            Row(
              children: [
                Expanded(
                  child: TextFormField(
                    controller: animal.physicalTagController,
                    decoration: const InputDecoration(
                      labelText: 'Physical Tag',
                      border: OutlineInputBorder(),
                    ),
                    validator: (value) {
                      if (value == null || value.trim().isEmpty) {
                        return 'Please enter a physical tag';
                      }
...
