...
    }

    return Row(
      children: [
        Expanded(
          child: Semantics(
            label: widget.label ?? 'Cages',
            button: true,
            child: InkWell(
            onTap: widget.disabled != true ? showCagePicker : null,
            child: InputDecorator(
              decoration: InputDecoration(
                labelText: widget.label ?? 'Cages',
...
