...
            } else {
              context.go('/litter');
            }
          },
          icon: const Icon(Icons.arrow_back),
        ),
        title: Text(isNew ? 'Create Litter' : 'Update Litter'),
      ),
      body: Form(
        key: _formKey,
        child: SingleChildScrollView(
          padding: const EdgeInsets.all(16),
          child: Column(
...
                label: 'Mating',
                placeholderText: 'Select mating',
                disabled: _litterDataLoaded,
              ),
              const SizedBox(height: 16),
              Semantics(
                label: 'Litter Tag',
                textField: true,
                child: TextFormField(
                  controller: _litterTagController,
                  decoration: const InputDecoration(
                    labelText: 'Litter Tag',
                    hintText: 'Enter litter tag',
...
