...
                FocusScope.of(context).unfocus();
                context.go('/litters');
              },
              child: const Text('Open'),
            ),
          ],
          child: const Text('Litter'),
        ),
        SubmenuButton(
          menuChildren: [
            MenuItemButton(
              onPressed: () {
                FocusScope.of(context).unfocus();
...
